--- a/html_advanced/0-index.html
+++ b/html_advanced/0-index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en", dir="ltr">
     <head>
-        <title>Title of the document</title>
     </head>
 
     <body>
-        The content of the document......
     </body>
 
 </html>
