--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -27,25 +27,58 @@
                 <h2>
                     Services
                 </h2>
+                    <h3>
+                        Design & Concept
+                    </h3>
+                    <h3>
+                        Digital Strategy
+                    </h3>
+                    <h3>
+                        Content Strategy
+                    </h3>
+                    <h3>
+                        UX Design
+                    </h3>
+                    <h3>
+                        Web Development
+                    </h3>
+                    <h3>
+                        Social Media
+                    </h3>
             </section>
             <section>
                 <h2>
                     Works
                 </h2>
                 <article>
-                    Work 1
+                    <h3>
+                        Interior Design
+                    </h3>
                 </article>
                 <article>
-                    Work 2
+                    <h3>
+                        Web Development
+                    </h3>
                 </article>
                 <article>
-                    Work 3
+                    <h3>
+                        Personal Brand
+                    </h3>
                 </article>
             </section>
             <section>
                 <h2>
                     About Us
                 </h2>
+                    <h3>
+                        Who are we
+                    </h3>
+                    <h3>
+                        Our culture
+                    </h3>
+                    <h3>
+                        how we work
+                    </h3>
             </section>
             <section>
                 <h2>
@@ -66,13 +99,19 @@
                     Testimonials
                 </h2>
                 <article>
-                    Testimonial 1
+                    <h3>
+                        Hoc loco tenere se Triarius non potuit.
+                    </h3>
                 </article>
                 <article>
-                    Testimonial 2
+                    <h3>
+                        Ut alios omittam, hunc appello, quem ille unum secutus est.
+                    </h3>
                 </article>
                 <article>
-                    Testimonial 3
+                    <h3>
+                        Bestiarum vero nullum iudicium puto.
+                    </h3>
                 </article>
             </section>
             <section>
