--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -85,13 +85,19 @@
                     Latest news
                 </h2>
                 <article>
-                    Article 1
+                    <h3>
+                        Hoc loco tenere se Triarius non potuit.
+                    </h3>
                 </article>
                 <article>
-                    Article 2
+                    <h3>
+                        Ut alios omittam, hunc appello, quem ille unum secutus est.
+                    </h3>
                 </article>
                 <article>
-                    Article 3
+                    <h3>
+                        Bestiarum vero nullum iudicium puto.
+                    </h3>
                 </article>
             </section>
             <section>
