--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -51,7 +51,7 @@
                 <h2>
                     Works
                 </h2>
-                <p>Take a look at our portfolio</p>
+                <p>Take a look in our portfolio</p>
                 <article>
                     <h3>
                         Interior Design
@@ -109,14 +109,14 @@
                     <h3>
                         Bestiarum vero nullum iudicium puto.
                     </h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones</p>
                 </article>
             </section>
             <section>
                 <h2>
                     Testimonials
                 </h2>
-                <p>We are more then a digital company</p>
+                <p>We are more than a digital company</p>
                 <article>
                     <h3>
                         Hoc loco tenere se Triarius non potuit.
