--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -12,12 +12,16 @@
     </head>
     <body>
         <header>
+            <div>
+            <span>Techium</span>
             <nav></nav>
+            </div>
         </header>
         <main>
             <h1>
                 Homepage
             </h1>
+            <div>
             <section>
                 <h2>
                     We help you build your brand!
@@ -140,9 +144,12 @@
                 <p>We like to know new people</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </section>
+        </div>
         </main>
         <footer>
+            <div>
             Footer
+            </div>
         </footer>
     </body>
 </html>
