--- a/html_advanced/14-index.html
+++ b/html_advanced/14-index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <header>
+            <span>Techium</span>
             <nav></nav>
         </header>
         <main>
