this will hopefully fix things?`

--- a/form/02-article.html
+++ b/form/02-article.html
@@ -149,7 +149,7 @@
             </header>
             <form action="#" method="post">
               <fieldset>
-                <legend class="visully-hidden">
+                <legend class="visually-hidden">
                   Your personal information
                   <div class="form-group col-1-2">
                   </div>
@@ -160,7 +160,7 @@
                 </legend>
               </fieldset>
               <fieldset>
-                <legend class="visully-hidden">
+                <legend class="visually-hidden">
                   Your comment
                   <div class="form-group col-2-3">
                   </div>
