--- a/form/03-article.html
+++ b/form/03-article.html
@@ -149,7 +149,7 @@
             </header>
             <form action="#" method="post">
               <fieldset>
-                <legend class="visully-hidden">
+                <legend class="visually-hidden">
                   Your personal information
                   <div class="form-group col-1-2">
                     <label for="your-first-name">First Name</label>
@@ -172,7 +172,7 @@
                 </legend>
               </fieldset>
               <fieldset>
-                <legend class="visully-hidden">
+                <legend class="visually-hidden">
                   Your comment
                   <div class="form-group col-2-3">
                     <label for="your-title">Title</label>
