--- a/form/03-article.html
+++ b/form/03-article.html
@@ -149,8 +149,7 @@
             </header>
             <form action="#" method="post">
               <fieldset>
-                <legend class="visually-hidden">
-                  Your personal information
+                <legend class="visually-hidden">Your personal information</legend>
                 <div class="form-group col-1-2">
                   <label for="your-first-name">First Name</label>
                   <div class="form-field">
@@ -169,11 +168,9 @@
                     <span class="form-field-container"></span>
                   </div>
                 </div>
-                </legend>
               </fieldset>
               <fieldset>
-                <legend class="visually-hidden">
-                  Your comment
+                <legend class="visually-hidden">Your comment</legend>
                 <div class="form-group col-2-3">
                   <label for="your-title">Title</label>
                   <div class="form-field">
@@ -189,7 +186,6 @@
                 <div class="form-group">
                   <button class="button button-primary">Post my comment</button>
                 </div>
-                </legend>
               </fieldset>
             </form>
           </section>
