--- a/form/02-article.html
+++ b/form/02-article.html
@@ -149,26 +149,22 @@
             </header>
             <form action="#" method="post">
               <fieldset>
-                <legend class="visually-hidden">
-                  Your personal information
+                <legend class="visually-hidden"></legend>Your personal information</legend>
                 <div class="form-group col-1-2">
                 </div>
                 <div class="form-group col-1-2">
                 </div>
                 <div class="form-group col-2-3">
                 </div>
-                </legend>
               </fieldset>
               <fieldset>
-                <legend class="visually-hidden">
-                  Your comment
+                <legend class="visually-hidden">Your comment</legend>
                 <div class="form-group col-2-3">
                 </div>
                 <div class="form-group col-2-3">
                 </div>
                 <div class="form-group">
                 </div>
-                </legend>
               </fieldset>
             </form>
           </section>
