--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -39,7 +39,7 @@
                 <h1>Chemical elements <span class="badge badge-info badge-pill">only 5</span></h1>
 
                 <div class="table-reponsive-lg">
-                    <table class="text-white table-dark table-hover">
+                    <table class="text-white table table-dark table-hover">
                         <thead>
                             <tr>
                                 <th scope="col">Atomic number</th>
