--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -19,47 +19,47 @@
           <a class="nav-link active" data-toggle="tab" href="#introduction">Introduction</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#discogrophy">Discography</a>
+          <a class="nav-link" data-toggle="tab" href="#discography">Discography</a>
         </li>
       </ul>
-    <div class="container-fluid tab-content bg-white p-3">
-      <div class="tab-pane fade show active" id="Introduction">
-        <p>
-          Bob Dylan (born Robert Allen Zimmerman; May 24, 1941) is an American singer-songwriter, author, and visual artist who has been a major figure in popular culture for more than fifty years. 
-        </p>
-        <p>
-          Much of his most celebrated work dates from the 1960s, when songs such as "Blowin' in the Wind" (1963) and "The Times They Are a-Changin'" (1964) became anthems for the civil rights movement and anti-war movement. 
-          His lyrics during this period incorporated a wide range of political, social, philosophical, and literary influences, defied pop-music conventions and appealed to the burgeoning counterculture.
-        </p>
-      </div>
-      <div class="tab-pane fade show active" id="Discography">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <a href="#accordian-1" data-toggle="collapse">Bob Dylan <em>(1962)</em></a>
-            <div href="#accordian-1" data-toggle="collapse">
-              <p>
-                Bob Dylan is the debut studio album by American singer-songwriter Bob Dylan, released on March 19, 1962 by Columbia Records. Produced by Columbia's legendary talent scout John H. Hammond, who signed Dylan to the label, the album features folk standards, plus two original compositions, "Talkin' New York" and "Song to Woody".
-              </p>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <a href="#accordian-2" data-toggle="collapse">The Freewheelin' Bob Dylan <em>(1963)</em></a>
-            <div href="#accordian-2" data-toggle="collapse">
-              <p>
-                The Freewheelin' Bob Dylan is the second studio album by American singer-songwriter Bob Dylan, released on May 27, 1963 by Columbia Records. Whereas his self-titled debut album Bob Dylan had contained only two original songs, Freewheelin' represented the beginning of Dylan's writing contemporary words to traditional melodies. Eleven of the thirteen songs on the album are Dylan's original compositions. The album opens with "Blowin' in the Wind", which became an anthem of the 1960s, and an international hit for folk trio Peter, Paul & Mary soon after the release of Freewheelin'. The album featured several other songs which came to be regarded as among Dylan's best compositions and classics of the 1960s folk scene: "Girl from the North Country", "Masters of War", "A Hard Rain's a-Gonna Fall" and "Don't Think Twice, It's All Right".
-              </p>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <a href="#accordian-3" data-toggle="collapse">The Times They Are a-Changin' <em>(1964)</em></a>
-            <div id="accordian-3" class="collapse">
-              <p>
-                  The Times They Are a-Changin' is the third studio album by American singer-songwriter Bob Dylan, released on January 13, 1964 by Columbia Records. Whereas his previous albums Bob Dylan and The Freewheelin' Bob Dylan consisted of original material among cover songs, Dylan's third album was the first to feature only original compositions. The album consists mostly of stark, sparsely arranged ballads concerning issues such as racism, poverty, and social change. The title track is one of Dylan's most famous; many feel that it captures the spirit of social and political upheaval that characterized the 1960s.
-              </p>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <a href="#accordian-4" data-toggle="collapse">Another Side of Bob Dylan <em>(1964)</em></a>
+      <div class="container-fluid tab-content bg-white p-3">
+        <div class="tab-pane fade show active" id="introduction">
+          <p>
+            Bob Dylan (born Robert Allen Zimmerman; May 24, 1941) is an American singer-songwriter, author, and visual artist who has been a major figure in popular culture for more than fifty years. 
+          </p>
+          <p>
+            Much of his most celebrated work dates from the 1960s, when songs such as "Blowin' in the Wind" (1963) and "The Times They Are a-Changin'" (1964) became anthems for the civil rights movement and anti-war movement. 
+            His lyrics during this period incorporated a wide range of political, social, philosophical, and literary influences, defied pop-music conventions and appealed to the burgeoning counterculture.
+          </p>
+        </div>
+        <div class="tab-pane fade" id="discography">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <a href="#accordian-1" data-toggle="collapse">Bob Dylan <em>(1962)</em></a>
+              <div id="accordian-1" class="collapse">
+                <p>
+                  Bob Dylan is the debut studio album by American singer-songwriter Bob Dylan, released on March 19, 1962 by Columbia Records. Produced by Columbia's legendary talent scout John H. Hammond, who signed Dylan to the label, the album features folk standards, plus two original compositions, "Talkin' New York" and "Song to Woody".
+                </p>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <a href="#accordian-2" data-toggle="collapse">The Freewheelin' Bob Dylan <em>(1963)</em></a>
+              <div id="accordian-2" class="collapse">
+                <p>
+                  The Freewheelin' Bob Dylan is the second studio album by American singer-songwriter Bob Dylan, released on May 27, 1963 by Columbia Records. Whereas his self-titled debut album Bob Dylan had contained only two original songs, Freewheelin' represented the beginning of Dylan's writing contemporary words to traditional melodies. Eleven of the thirteen songs on the album are Dylan's original compositions. The album opens with "Blowin' in the Wind", which became an anthem of the 1960s, and an international hit for folk trio Peter, Paul & Mary soon after the release of Freewheelin'. The album featured several other songs which came to be regarded as among Dylan's best compositions and classics of the 1960s folk scene: "Girl from the North Country", "Masters of War", "A Hard Rain's a-Gonna Fall" and "Don't Think Twice, It's All Right".
+                </p>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <a href="#accordian-3" data-toggle="collapse">The Times They Are a-Changin' <em>(1964)</em></a>
+              <div id="accordian-3" class="collapse">
+                <p>
+                    The Times They Are a-Changin' is the third studio album by American singer-songwriter Bob Dylan, released on January 13, 1964 by Columbia Records. Whereas his previous albums Bob Dylan and The Freewheelin' Bob Dylan consisted of original material among cover songs, Dylan's third album was the first to feature only original compositions. The album consists mostly of stark, sparsely arranged ballads concerning issues such as racism, poverty, and social change. The title track is one of Dylan's most famous; many feel that it captures the spirit of social and political upheaval that characterized the 1960s.
+                </p>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <a href="#accordian-4" data-toggle="collapse">Another Side of Bob Dylan <em>(1964)</em></a>
               <div id="accordian-4" class="collapse">
                 <p>
                     Another Side of Bob Dylan is the fourth studio album by American singer and songwriter Bob Dylan, released on August 8, 1964 by Columbia Records.
