added 5 and Im done for the night

--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -12,7 +12,7 @@
                 $('tbody').append($("<tr>").append($('<td>').text('Paulette')).append($('<td>').text('Salva')));
                 $('tbody').append($("<tr>").append($('<td>').text('Antoine')).append($('<td>').text('Salva')));
             }
-            document.addEventListener ("load", createFamilyTree);
+            document.addEventListener ("load", createFamilyTree());
         </script>
     </head>
     <body>
