--- a/JQuery_advanced/2-index.html
+++ b/JQuery_advanced/2-index.html
@@ -9,7 +9,7 @@
                 var newTable = $('<table><thead><tr><th>Firstname</th><th>Lastname</th></tr></thead><tbody><tr><td>Guillaume</td><td>Salva</td></tr><tr><td>Paulette</td><td>Salva</td></tr><tr><td>Antoine</td><td>Salva</td></tr></tbody></table>')
                 $('body').append(newTable);
             }
-            document.addEventListener ("load", createFamilyTree);
+            document.addEventListener ("load", createFamilyTree());
         </script>
     </head>
     <body>
