--- a/JQuery_advanced/0-index.html
+++ b/JQuery_advanced/0-index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <title>Task 0</title>
         <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>    </script>
-        <script>
-            $(document).ready(function() {
+        <script type="application/javascript">   
+        $(document).ready(function() {
                 if (typeof jQuery != undefined) {
                     console.log("jQuery has been loaded correctly");
                 } else {
