--- a/JQuery_advanced/11-index.html
+++ b/JQuery_advanced/11-index.html
@@ -5,7 +5,7 @@
     <title>Task 10</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
-    <script>
+<script type="application/javascript">
     $(document).ready(function() {
         listPosts();
     });
