--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Task 2</title>
         <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>    </script>
-        <script>
+        <script type="application/javascript">
             function createFamilyTree() {
                 $('body').append("<table>").append("<thead>").append($("<tr>").append($('<th>').text('Firstname')).append($('<th>').text('Lastname')));
                 $('table').append("<tbody>");
