anouther poosh to fix

--- a/JQuery_advanced/3-index.html
+++ b/JQuery_advanced/3-index.html
@@ -12,7 +12,9 @@
                 $('tbody').append($("<tr>").append($('<td>').text('Paulette')).append($('<td>').text('Salva')));
                 $('tbody').append($("<tr>").append($('<td>').text('Antoine')).append($('<td>').text('Salva')));
             }
-            document.addEventListener ("load", createFamilyTree());
+            $(document).ready(function(){
+                createFamilyTree();
+            });
         </script>
     </head>
     <body>
